# focus_vision_pcvr

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md  TODOS.md  build.bat  build.sh
.claude/: settings.local.json
.github/workflows/: build.yml
client/: settings.gradle.kts
client/app/: build.gradle.kts
client/app/src/main/: AndroidManifest.xml
client/app/src/main/cpp/: CMakeLists.txt  audio_player.cpp  audio_player.h  controller_poller.cpp  controller_poller.h  eye_tracker.cpp  eye_tracker.h  facial_tracker.cpp  facial_tracker.h  fec_decoder.cpp  fec_decoder.h  heartbeat_client.h  hmd_profile.cpp  hmd_profile.h  main.cpp  nal_validator.cpp  nal_validator.h  network_receiver.cpp  network_receiver.h  openxr_app.cpp  openxr_app.h  overlay_renderer.cpp  overlay_renderer.h  platform_defines.h  pose_history.h  renderer.cpp  renderer.h  stats_reporter.h  tcp_client.cpp  tcp_client.h  timewarp.cpp  timewarp.h  tracking_sender.cpp  tracking_sender.h  video_decoder.cpp  video_decoder.h  xr_swapchain.cpp  xr_swapchain.h  xr_utils.h
client/app/src/main/kotlin/com/focusvision/pcvr/: MainActivity.kt
client/app/src/main/res/values/: strings.xml
config/: default.toml
docs/: API.md  CONFIG.md  E2E_TEST_GUIDE.md  PLUGIN_API_DESIGN.md  TESTING.md
docs/CODEMAPS/: client.md  common.md  companion-app.md  driver.md  streaming-engine.md
docs/superpowers/specs/: 2026-04-09-v2.2-streaming-improvements-design.md  2026-04-10-v2.3-device-validation-playbook.md  2026-04-13-cargo-fuzz-design.md  2026-04-13-gcc-delay-estimator-design.md
driver/: CMakeLists.txt  driver.vrdrivermanifest  install.bat  uninstall.bat
driver/resources/settings/: default.vrsettings
driver/src/: controller_device.cpp  controller_device.h  direct_mode.cpp  direct_mode.h  driver_main.cpp  frame_copy.cpp  frame_copy.h  hmd_device.cpp  hmd_device.h  nvenc_encoder.cpp  nvenc_encoder.h  qp_map.h  server_driver.cpp  server_driver.h
driver/tests/: test_qp_map.cpp
rust/common/: Cargo.toml
rust/common/src/: constants.rs  lib.rs  protocol.rs
rust/companion-app/: Cargo.toml
rust/companion-app/src/: adb.rs  config.rs  driver.rs  export.rs  main.rs  stats_history.rs
rust/streaming-engine/: Cargo.toml  build.rs  cbindgen.toml
rust/streaming-engine/benches/: transport.rs
rust/streaming-engine/fuzz/: Cargo.toml
rust/streaming-engine/fuzz/fuzz_targets/: fuzz_config.rs  fuzz_fec.rs  fuzz_protocol.rs  fuzz_recording.rs  fuzz_rtp.rs  fuzz_slice.rs
rust/streaming-engine/include/: streaming_engine.h
rust/streaming-engine/src/: codec_benchmark.rs  config.rs  engine.rs  lib.rs  pipeline.rs  sleep_mode.rs
rust/streaming-engine/src/adaptive/: bandwidth_estimator.rs  bitrate_controller.rs  burst_detector.rs  gcc_estimator.rs  mod.rs
rust/streaming-engine/src/audio/: capture.rs  encoder.rs
rust/streaming-engine/src/control/: heartbeat.rs  mod.rs  pairing.rs  reconnect.rs  tcp_server.rs  tls.rs
rust/streaming-engine/src/face_tracking/: calibration.rs  ft_mirror.rs  mod.rs  osc_bridge.rs  profiles.rs
rust/streaming-engine/src/metrics/: latency.rs  memory.rs  mod.rs  session_log.rs
rust/streaming-engine/src/recording/: audio.rs  mod.rs
rust/streaming-engine/src/tracking/: receiver.rs
rust/streaming-engine/src/transport/: fec.rs  mod.rs  rtp.rs  slice.rs  udp.rs
rust/streaming-engine/src/video/: mod.rs  test_pattern.rs
rust/streaming-engine/src/video/foveated/: encoder_config.rs  mod.rs  region.rs
rust/streaming-engine/tests/: fuzz_tests.rs  recording_test.rs  video_pipeline_test.rs
