[package]
name = "focus-vision-companion"
version = "1.1.0"
edition = "2021"
description = "Focus Vision PCVR companion app — driver install, PIN display, HMD deploy"

[[bin]]
name = "focus-vision"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.31"
serde = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dirs-next = "2"
serde_json = "1"
egui_plot = "0.31"
zip = { version = "2", default-features = false, features = ["deflate"] }
