[package]
name = "streaming-engine"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
fvp-common = { path = "../common" }
serde.workspace = true
toml.workspace = true
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "io-util"] }
bytes = "1"
reed-solomon-erasure = "6"
tokio-util = { version = "0.7", features = ["rt"] }
cpal = "0.15"
audiopus = "0.2"
dirs-next = "2"

[build-dependencies]
cbindgen = "0.27"
